# GoodSciProjTemplate

./: .buildinfo  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CITATION.cff  CMakeLists.txt  LICENSE.md  README.md  cog.toml  environment.yaml  environment.yml  genindex.html  index.html  objects.inv  py-modindex.html  references.html  requirements.txt  search.html  searchindex.js  setup.py
.github/workflows/: CI.yaml  CI.yml
_modules/: index.html
_modules/libs/src_py/: mock.html
_sources/: index.rst.txt
_sources/src_cxx/: index.rst.txt  mock_cxx.rst.txt
_sources/src_py/: index.rst.txt  mock.rst.txt
_sources/usage/: contact.rst.txt  contributing.rst.txt  getstart.rst.txt  ourdocs.rst.txt
docs/doxygen/: doxygen.dox
docs/source/: conf.py  index.rst  references.bib  references.rst
docs/source/src_cxx/: mock.rst
docs/source/usage/: cocogitto.rst  contact.rst  getstart.rst  ourdocs.rst  ourtests.rst  pybind11.rst
libs/: __init__.py
libs/src_cxx/: mock.cpp  mock.hpp  mock_cxx.cpp  mock_cxx.hpp
libs/src_py/: __init__.py  mock.py
scripts/: mock_python.py
src_cxx/: index.html  mock.html  mock_cxx.html
src_py/: index.html  mock.html
tests/: __init__.py  test_101.py  test_mock.py  test_mock_cxx.py
usage/: cocogitto.html  contact.html  contributing.html  getstart.html  ourdocs.html  ourtests.html  pybind11.html
